logical-solutions/styles/3-elements/hero-image.sass
.page-hero
  height: 75rem
  width: 100%
  background: $light-grey center no-repeat
  background-size: cover
  position: relative
  padding-top: 18rem
  z-index: 0
  overflow: hidden

  &--image
    position: absolute
    top: 0
    right: 0
    bottom: 0
    left: 0
    z-index: -1
    background-size: cover
    background-position: center

    &::after
      content: ''
      position: absolute
      top: 0
      right: 0
      bottom: 0
      left: 0
      background: transparentize($brand-dark-blue, .55)

  &--title
    color: white
    background: $brand-blue
    display: inline-block
    @extend .text-bold
    letter-spacing: 2px
    font-size: 4rem
    padding: .3rem 18rem .3rem 0
    position: relative
    line-height: 1

    &::after
      content: ''
      position: absolute
      background: $brand-blue
      top: 0
      right: 100%
      height: 100%
      width: 50rem
      z-index: 1

  &--blurb
    color: white
    font-size: 3rem
    margin-top: 20rem
    padding-top: 2rem
    width: 77.5rem
    @extend .text-thin
    letter-spacing: 2px
    position: relative

    &::after
      content: ''
      position: absolute
      background: $brand-green
      top: 0
      right: 0
      height: 4px
      width: 200rem
      z-index: 1

.page-hero__home-page
  height: 95rem

  .page-hero--image
    background-position: left center

.home-hero
  position: relative
  float: left
  left: auto
  margin-top: calc(50vh - 11rem)
  transform: translateY(-50%)

  &--choose-container
    float: left

    &--choose
      color: white
      font-size: 5.5rem
      line-height: 3.5rem
      margin: 0
      padding: 0 0 0 3rem
      float: left

  &--white-box
    color: $brand-blue
    background-color: white
    float: left
    clear: both
    width: 64rem

    &--logical-solution
      font-size: 6rem
      line-height: 6rem
      margin: 0
      padding: .6rem 2rem 1rem 3rem
      display: inline-block
      float: left
      clear: both

  &--blue-box
    color: white
    background-color: $brand-blue
    padding: 0rem .5rem 0rem 1.6rem
    margin-left: 18rem
    float: left

    &--subtitle
      margin: 0

  &--see-our-process-container
    position: absolute
    top: 78.5rem
    left: 50%
    transform: translateX(-50%)

    &--see-our-process
      font-size: 2.2rem
      letter-spacing: 1.5px

.home .page-hero--image::after
  background: none
  
@media screen and (max-width: 767px)
  .page-hero
    height: 60rem
    padding-top: 11rem

    &--title
      font-size: 3rem

    &--blurb
      width: 100%
      font-size: 1.6rem
      margin-top: 15rem
      margin-left: 10rem
      border-top: 2px solid $brand-green
      border-left: 2px solid $brand-green
      padding-left: 2.5rem
      padding-right: 10rem
      line-height: 1.4

      &::before
        content: ''
        position: absolute
        height: 2px
        width: 20rem
        right: 100%
        bottom: 0
        background: $brand-green

      &::after
        content: none

  .page-hero__home-page
    height: 100vh

  .home-hero
    left: 0

    &--choose-container
      background-color: white
      width: 46rem

      &--choose
        color: $brand-blue
        padding: 2rem 2rem 0rem 3rem
        font-size: 3rem
        line-height: 2.5rem
        letter-spacing: 0px

    &--white-box
      width: 46rem

      &--logical-solution
        padding-top: 0
        font-size: 4rem
        line-height: 3.5rem

    &--blue-box
      transform: translateY(-.75rem)
      margin-left: 3rem
      right: 15px
      padding: 0rem 1rem

      &--subtitle
        font-size: 3rem
        font-family: Amelia-Bold, sans-serif
        letter-spacing: 2px

    &--see-our-process-container
      top: 80vh
      min-width: 35rem

      &--see-our-process
        font-size: 4rem
        letter-spacing: 1.5px

@media screen and (max-width: 479px)
  .home-hero

    &--choose-container
      width: 35rem

      &--choose
        font-size: 2.5rem
        line-height: 2.5rem
        padding-left: 1.5rem
        padding-top: 1rem

    &--white-box
      width: 35rem

      &--logical-solution
        font-size: 3rem
        line-height: 3rem
        padding-left: 1.5rem

    &--blue-box
      margin-left: 1.5rem
      right: 15px
      max-width: 40rem
      padding: .5rem 1rem

      &--subtitle
        font-size: 2.25rem
        letter-spacing: 1.5px

    &--see-our-process-container
      min-width: 23rem

      &--see-our-process
        font-size: 2.5rem
        letter-spacing: 1.5px

@media screen and (max-width: 400px)
  .page-hero
    &--title
      padding-right: 8rem

